--- a/day1.html
+++ b/day1.html
@@ -67,7 +67,8 @@
     </tbody></table>
 
     <table id="Keynote 1">
-        <tbody><tr>
+        <tbody>
+            <tr>
             <td class="date" rowspan="3">
                 9:30 - 10:30 am
             </td>
@@ -75,44 +76,23 @@
                 Keynote: Matryoshka structured Adaptive Models
             </td>
             </tr>
-             <tr>
+            <tr>
             <td class="speaker">
                 <a href="https://www.prateekjain.org/"><b>Prateek Jain</b></a>, (Google)
             </td>
              </tr>
              <tr>
              <td class="abstract">
-                Current foundational models are rigidly structured and need to be trained for each scale to meet the desired quality-latency-cost tradeoff. In this talk, we will discuss how simple "Matryoshka" or nested structured models -- aided by natural modularity in our foundational models -- allow for training one model but reading off many accurate models that allows us to meet desired tradeoffs without *any additional training*. We illustrated this basic idea for transformer based LLMs, VITs, servable MLP models, embeddings, and quantized models.             </td>
+                <b>Abstract:</b> Current foundational models are rigidly structured and need to be trained for each scale to meet the desired quality-latency-cost tradeoff. In this talk, we will discuss how simple "Matryoshka" or nested structured models -- aided by natural modularity in our foundational models -- allow for training one model but reading off many accurate models that allows us to meet desired tradeoffs without *any additional training*. We illustrated this basic idea for transformer based LLMs, VITs, servable MLP models, embeddings, and quantized models.
             </td>
-                </tr>
-             <tr>
+            </tr>
+            <tr>
             <td class="abstract">
-                Prateek Jain is a Principal Scientist / Director at Google DeepMind India where he leads the Machine Learning and Optimization team as well as Gemini's Long Term Model Design Research. He obtained his doctorate from UT Austin and BTech from IIT-Kanpur. He has conducted foundational research in the areas of large-scale and non-convex optimization, and resource-constrained ML. Prateek regularly serves on the senior PC of top ML conferences and is on the editorial board of top ML journals including JMLR, SIMODS. He has also won multiple best paper awards including the 2020 Best Paper by IEEE Signal Processing Society. Prateek also received the Young Alumnus Award from IIT Kanpur in 2021 and the ACM India Early Career Researcher Award in 2022.            </td>
+                <b>Bio:</b> Prateek Jain is a Principal Scientist / Director at Google DeepMind India where he leads the Machine Learning and Optimization team as well as Gemini's Long Term Model Design Research. He obtained his doctorate from UT Austin and BTech from IIT-Kanpur. He has conducted foundational research in the areas of large-scale and non-convex optimization, and resource-constrained ML. Prateek regularly serves on the senior PC of top ML conferences and is on the editorial board of top ML journals including JMLR, SIMODS. He has also won multiple best paper awards including the 2020 Best Paper by IEEE Signal Processing Society. Prateek also received the Young Alumnus Award from IIT Kanpur in 2021 and the ACM India Early Career Researcher Award in 2022.
             </td>        
             </tr>
     </tbody></table>
 
-    <table id="Gus Xia">
-        <tbody><tr>
-            <td class="date" rowspan="3">
-             9:30am
-            </td>
-            <td class="title">
-                A Musical View on Multimodal Large Language Models: Hierarchical Modeling, Control, and AI Partnerships
-            </td>
-        </tr>
-        <tr>
-            <td class="speaker">
-                <a href="https://mbzuai.ac.ae/study/faculty/dr-gus-xia/"><b>Gus Xia</b></a> (MBZUAI)
-            </td>
-        </tr>
-        <tr>
-            <td class="abstract">
-                In this presentation, Gus will delve into three pioneering studies focused on developing multimodal language models for music AI. Firstly, he will discuss whole-song generation through cascaded diffusion modeling, which integrates hierarchical music language structures into diffusion models for enhanced sample-efficient learning. Secondly, he will introduce "coco-mulla," the inaugural "controlnet" fashion model that adeptly applies content-based controls to large-scale audio generation tasks. Lastly, Gus will present Flute X GPT, which introduces LAUI (LLM-Agent User Interface) as a potential next-generation Human-Computer Interaction (HCI) paradigm after Graphical User Interface (GUI). This system capitalizes on a nuanced understanding of both users and tutorial software to innovate customized music-learning experiences.
-        </td></tr>
-    </tbody></table>
-
-    
      <table>
         <tbody><tr>
             <td class="date" rowspan="2">
