--- a/day1.html
+++ b/day1.html
@@ -69,29 +69,38 @@
     <table id="Keynote 1">
         <tbody>
             <tr>
-            <td class="date" rowspan="3">
-                9:30 - 10:30 am
-            </td>
-            <td class="title">
-                Keynote: Matryoshka structured Adaptive Models
-            </td>
+                <td class="date" rowspan="3">
+                    9:30 - 10:30 am
+                </td>
+                <td class="title">
+                    Keynote: Matryoshka structured Adaptive Models
+                </td>
             </tr>
             <tr>
-            <td class="speaker">
-                <a href="https://www.prateekjain.org/"><b>Prateek Jain</b></a>, (Google)
-            </td>
+                <td class="speaker">
+                    <a href="https://www.prateekjain.org/"><b>Prateek Jain</b></a>, (Google)
+                </td>
              </tr>
              <tr>
-             <td class="abstract">
-                <b>Abstract:</b> Current foundational models are rigidly structured and need to be trained for each scale to meet the desired quality-latency-cost tradeoff. In this talk, we will discuss how simple "Matryoshka" or nested structured models -- aided by natural modularity in our foundational models -- allow for training one model but reading off many accurate models that allows us to meet desired tradeoffs without *any additional training*. We illustrated this basic idea for transformer based LLMs, VITs, servable MLP models, embeddings, and quantized models.
-            </td>
+                 <td class="abstract">
+                    <b>Abstract:</b> Current foundational models are rigidly structured and need to be trained for each scale to meet the desired quality-latency-cost tradeoff. 
+                     In this talk, we will discuss how simple "Matryoshka" or nested structured models -- aided by natural modularity in our foundational models -- 
+                     allow for training one model but reading off many accurate models that allows us to meet desired tradeoffs without *any additional training*. 
+                     We illustrated this basic idea for transformer based LLMs, VITs, servable MLP models, embeddings, and quantized models.
+                </td>
             </tr>
             <tr>
-            <td class="abstract">
-                <b>Bio:</b> Prateek Jain is a Principal Scientist / Director at Google DeepMind India where he leads the Machine Learning and Optimization team as well as Gemini's Long Term Model Design Research. He obtained his doctorate from UT Austin and BTech from IIT-Kanpur. He has conducted foundational research in the areas of large-scale and non-convex optimization, and resource-constrained ML. Prateek regularly serves on the senior PC of top ML conferences and is on the editorial board of top ML journals including JMLR, SIMODS. He has also won multiple best paper awards including the 2020 Best Paper by IEEE Signal Processing Society. Prateek also received the Young Alumnus Award from IIT Kanpur in 2021 and the ACM India Early Career Researcher Award in 2022.
-            </td>        
+                <td class="abstract">
+                    <b>Bio:</b> Prateek Jain is a Principal Scientist / Director at Google DeepMind India where he leads the Machine Learning and Optimization team as well as Gemini's Long Term Model Design Research.
+                    He obtained his doctorate from UT Austin and BTech from IIT-Kanpur. 
+                    He has conducted foundational research in the areas of large-scale and non-convex optimization, and resource-constrained ML. 
+                    Prateek regularly serves on the senior PC of top ML conferences and is on the editorial board of top ML journals including JMLR, SIMODS. 
+                    He has also won multiple best paper awards including the 2020 Best Paper by IEEE Signal Processing Society. 
+                    Prateek also received the Young Alumnus Award from IIT Kanpur in 2021 and the ACM India Early Career Researcher Award in 2022.
+                </td>        
             </tr>
-    </tbody></table>
+        </tbody>
+    </table>
 
      <table>
         <tbody><tr>
