--- a/day1.html
+++ b/day1.html
@@ -87,7 +87,9 @@
                     <b>Abstract:</b> Current foundational models are rigidly structured and need to be trained for each scale to meet the desired quality-latency-cost tradeoff. 
                      In this talk, we will discuss how simple "Matryoshka" or nested structured models -- aided by natural modularity in our foundational models -- 
                      allow for training one model but reading off many accurate models that allows us to meet desired tradeoffs without *any additional training*. 
-                     We illustrated this basic idea for transformer based LLMs, VITs, servable MLP models, embeddings, and quantized models.<br>
+                     We illustrated this basic idea for transformer based LLMs, VITs, servable MLP models, embeddings, and quantized models.
+                     
+                    <hr style="border: 0; height: 1px; background-color: #ddd; margin: 16px 0;">
 
                     <b>Bio:</b> Prateek Jain is a Principal Scientist / Director at Google DeepMind India where he leads the Machine Learning and Optimization team as well as Gemini's Long Term Model Design Research.
                     He obtained his doctorate from UT Austin and BTech from IIT-Kanpur. 
