--- a/day1.html
+++ b/day1.html
@@ -48,7 +48,7 @@
 
    
 
-    <h2><a href="https://mbzuai.ac.ae/study/faculty/timothy-baldwin/">Day 1 Program (May 26, Mon, Executive Theatre)</a></h2>
+    <h2><a href="https://are01.safelinks.protection.outlook.com/?url=https%3A%2F%2Fmbzuai-ac-ae.zoom.us%2Fj%2F95914562931%3Fpwd%3Dav3fzfMXWIN7UEQL1ioR6PIWPEFa1v.1&data=05%7C02%7CTongliang.Liu%40mbzuai.ac.ae%7C4d28229a725d4126114b08dd98394dbb%7Cc93272d31b074b3da3b619b34a973915%7C0%7C0%7C638834094185068795%7CUnknown%7CTWFpbGZsb3d8eyJFbXB0eU1hcGkiOnRydWUsIlYiOiIwLjAuMDAwMCIsIlAiOiJXaW4zMiIsIkFOIjoiTWFpbCIsIldUIjoyfQ%3D%3D%7C0%7C%7C%7C&sdata=tavWQSyexW5bKO8ldqJ6D%2BlftnCrZxtdep3m%2FXmsTPM%3D&reserved=0">Day 1 Program (May 26, Mon, Executive Theatre)</a></h2>
 
     <table id="Opening remarks">
         <tbody><tr class="speaker">
@@ -61,7 +61,7 @@
         </tr>
         <tr>
             <td class="speaker">
-                <a href="https://are01.safelinks.protection.outlook.com/?url=https%3A%2F%2Fmbzuai-ac-ae.zoom.us%2Fj%2F95914562931%3Fpwd%3Dav3fzfMXWIN7UEQL1ioR6PIWPEFa1v.1&data=05%7C02%7CTongliang.Liu%40mbzuai.ac.ae%7C4d28229a725d4126114b08dd98394dbb%7Cc93272d31b074b3da3b619b34a973915%7C0%7C0%7C638834094185068795%7CUnknown%7CTWFpbGZsb3d8eyJFbXB0eU1hcGkiOnRydWUsIlYiOiIwLjAuMDAwMCIsIlAiOiJXaW4zMiIsIkFOIjoiTWFpbCIsIldUIjoyfQ%3D%3D%7C0%7C%7C%7C&sdata=tavWQSyexW5bKO8ldqJ6D%2BlftnCrZxtdep3m%2FXmsTPM%3D&reserved=0"><b>Timothy Baldwin</b></a>, (MBZUAI)
+                <a href="https://mbzuai.ac.ae/study/faculty/timothy-baldwin/"><b>Timothy Baldwin</b></a>, (MBZUAI)
             </td>
         </tr>
     </tbody></table>
