--- a/day2.html
+++ b/day2.html
@@ -46,7 +46,7 @@
         </tr>
     </tbody></table>
    
-    <h2>Day 2 Program (May 27, Tue)</h2>
+    <h2><a href="https://are01.safelinks.protection.outlook.com/?url=https%3A%2F%2Fmbzuai-ac-ae.zoom.us%2Fj%2F96519805133%3Fpwd%3D5vSmliU1PrThAwVqyEyCiOJIxFITxW.1&data=05%7C02%7CTongliang.Liu%40mbzuai.ac.ae%7C4d28229a725d4126114b08dd98394dbb%7Cc93272d31b074b3da3b619b34a973915%7C0%7C0%7C638834094185096213%7CUnknown%7CTWFpbGZsb3d8eyJFbXB0eU1hcGkiOnRydWUsIlYiOiIwLjAuMDAwMCIsIlAiOiJXaW4zMiIsIkFOIjoiTWFpbCIsIldUIjoyfQ%3D%3D%7C0%7C%7C%7C&sdata=DgBCB375pXNb4I5frF2WKQ8gykP4LTbUvYFuPO3Zr7c%3D&reserved=0">Day 2 Program (May 27, Tue, Executive Theatre)</a></h2>
     
      <table id="Contributed talk 8">
         <tbody><tr>
