--- a/day1.html
+++ b/day1.html
@@ -260,7 +260,7 @@
         </tr>
         <tr>
             <td class="speaker">
-                <a href="https://mbzuai.ac.ae/study/faculty/preslav-nakov/"><b>Perusal Nakov</b></a>, (MBZUAI)
+                <a href="https://mbzuai.ac.ae/study/faculty/preslav-nakov/"><b>Preslav Nakov</b></a>, (MBZUAI)
             </td>
         </tr>
             <tr>
