--- a/day1.html
+++ b/day1.html
@@ -146,39 +146,32 @@
             </tr>
     </tbody></table>
 
-    <table id="Contributed talk 2">
+              <table id="Contributed talk 2">
         <tbody><tr>
             <td class="date" rowspan="3">
                 11:30 - 12:00 pm
             </td>
             <td class="title">
-                Protecting and Prompting: Safety Standards and Social Dimensions in Language Models
+                Scalable Safety
             </td>
         </tr>
         <tr>
             <td class="speaker">
-                <a href="https://mbzuai.ac.ae/study/faculty/fajri-koto/"><b>Fajri Koto</b></a>, (MBZUAI)
+                <a href="https://kiddyboots216.github.io/"><b>Ashwinee Panda</b></a>, (Princeton University)
             </td>
         </tr>
-            <tr>
+             <tr>
                  <td class="abstract">
                      
-                    <b>Abstract:</b> Responsible development of large language models (LLMs) requires a holistic evaluation of not just performance, but also safety and fairness. 
-                     In this talk, I present two interconnected studies that expose critical gaps in how LLMs are currently assessed. 
-                     The first introduces Libra-Leaderboard, a framework that ranks LLMs based on a balanced evaluation of capability and safety, using a distance-to-optimal-score method to discourage trade-offs between the two. 
-                     Our evaluation of 26 leading models reveals that safety weaknesses remain even in top-performing systems. 
-                     The second study investigates fairness by examining how LLMs respond to prompts from users with different demographic backgrounds, such as gender, employment sector, language, and education level. 
-                     We find that, despite using equally valid prompts, the quality of model responses varies across these groups, indicating disparities in how LLMs generalize across user profiles. 
-                     Together, these works argue for more responsible LLM evaluation, one that not only measures what a model can do, but also for whom and at what cost.
+                    <b>Abstract:</b> We consider a range of failure settings where existing safety mechanisms are insufficient. We examine the proficiency of existing models for safety oversight.
                      
                     <hr style="border: 0; height: 1px; background-color: #ddd; margin: 16px 0;">
 
-                    <b>Bio:</b> Fajri Koto is an Assistant Professor in the Natural Language Processing (NLP) Department at Mohamed bin Zayed University of Artificial Intelligence (MBZUAI). 
-                     He holds a PhD in Engineering (Natural Language Processing) from The University of Melbourne, supported by the Australia Awards Scholarship. 
-                     Before entering academia, he spent over four years in industry at Samsung Research and KMKLabs, and also worked at Amazon Australia during his doctoral studies. His research focuses on human-centered NLP, including fairness in generative AI, agent-based NLP applications, dialogue systems and conversational AI, cultural alignment of large language models (LLMs), and low-resource methods for multilingual and multimodal NLP.
+                    <b>Bio:</b> Ashwinee is a postdoctoral fellow at UMD working with Tom Goldstein on LLMs. 
                 </td>        
             </tr>
     </tbody></table>
+
     <table>
         <tbody><tr>
             <td class="date" rowspan="2">
