--- a/index.html
+++ b/index.html
@@ -75,10 +75,19 @@
         Local arrangement chair: <a href="https://runqilin.github.io">Runqi Lin</a>, MBZUAI/USYD <br>     
     </p>
      <p>
-        <b>Local hosts:</b><br>
+        <b>Local hosts</b><br>
         <a href="mailto:%20maria.pereira@mbzuai.ac.ae">Maria Pereira</a>, MBZUAI<br>
         <a href="mailto:%20Analyne.Mata@mbzuai.ac.ae">Analyen Mata</a>, MBZUAI<br>
     </p>
+
+     <p>
+        <b>Venue</b><br>
+        Location: Executive Theatre<br>
+
+        <a href="https://are01.safelinks.protection.outlook.com/?url=https%3A%2F%2Fmbzuai-ac-ae.zoom.us%2Fj%2F95914562931%3Fpwd%3Dav3fzfMXWIN7UEQL1ioR6PIWPEFa1v.1&data=05%7C02%7CTongliang.Liu%40mbzuai.ac.ae%7C4d28229a725d4126114b08dd98394dbb%7Cc93272d31b074b3da3b619b34a973915%7C0%7C0%7C638834094185068795%7CUnknown%7CTWFpbGZsb3d8eyJFbXB0eU1hcGkiOnRydWUsIlYiOiIwLjAuMDAwMCIsIlAiOiJXaW4zMiIsIkFOIjoiTWFpbCIsIldUIjoyfQ%3D%3D%7C0%7C%7C%7C&sdata=tavWQSyexW5bKO8ldqJ6D%2BlftnCrZxtdep3m%2FXmsTPM%3D&reserved=0">Day 1 Zoom link</a><br>
+        <a href="https://are01.safelinks.protection.outlook.com/?url=https%3A%2F%2Fmbzuai-ac-ae.zoom.us%2Fj%2F96519805133%3Fpwd%3D5vSmliU1PrThAwVqyEyCiOJIxFITxW.1&data=05%7C02%7CTongliang.Liu%40mbzuai.ac.ae%7C4d28229a725d4126114b08dd98394dbb%7Cc93272d31b074b3da3b619b34a973915%7C0%7C0%7C638834094185096213%7CUnknown%7CTWFpbGZsb3d8eyJFbXB0eU1hcGkiOnRydWUsIlYiOiIwLjAuMDAwMCIsIlAiOiJXaW4zMiIsIkFOIjoiTWFpbCIsIldUIjoyfQ%3D%3D%7C0%7C%7C%7C&sdata=DgBCB375pXNb4I5frF2WKQ8gykP4LTbUvYFuPO3Zr7c%3D&reserved=0">Day 2 Zoom link</a><br>
+    </p>
+    
     <!-- <table class="sponsors">
         <tr>
             <td class="sponsor">
