--- a/day2.html
+++ b/day2.html
@@ -206,7 +206,7 @@
         </tr>
         <tr>
             <td class="speaker">
-                <a href="https://mbzuai.ac.ae/study/faculty/tongliang-liu/"><b>Tongliang Liu</b></a>, (USYD)
+                <a href="https://mbzuai.ac.ae/study/faculty/tongliang-liu/"><b>Tongliang Liu</b></a>, (MBZUAI / USYD)
                
             </td>
         </tr>
