--- a/day1.html
+++ b/day1.html
@@ -61,7 +61,7 @@
         </tr>
         <tr>
             <td class="speaker">
-                <a href="https://mbzuai.ac.ae/study/faculty/timothy-baldwin/"><b>Timothy Baldwin</b></a>, (MBZUAI)
+                <a href="https://mbzuai.ac.ae/study/faculty/timothy-baldwin/"><b>Timothy Baldwin</b></a> (MBZUAI)
             </td>
         </tr>
     </tbody></table>
@@ -78,7 +78,7 @@
             </tr>
             <tr>
                 <td class="speaker">
-                    <a href="https://www.prateekjain.org/"><b>Prateek Jain</b></a>, (Google)
+                    <a href="https://www.prateekjain.org/"><b>Prateek Jain</b></a> (Google)
                 </td>
              </tr>
              <tr>
@@ -124,7 +124,7 @@
         </tr>
         <tr>
             <td class="speaker">
-                <a href="https://nouhadziri.github.io/"><b>Nouha Dziri</b></a>, (Allen Institute for AI)
+                <a href="https://nouhadziri.github.io/"><b>Nouha Dziri</b></a> (Allen Institute for AI)
             </td>
         </tr>
         <tr>
@@ -157,7 +157,7 @@
         </tr>
         <tr>
             <td class="speaker">
-                <a href="https://kiddyboots216.github.io/"><b>Ashwinee Panda</b></a>, (Princeton University)
+                <a href="https://kiddyboots216.github.io/"><b>Ashwinee Panda</b></a> (Princeton University)
             </td>
         </tr>
              <tr>
@@ -193,7 +193,7 @@
         </tr>
         <tr>
             <td class="speaker">
-                <a href="https://xiaocw11.github.io/"><b>Chaowei Xiao</b></a>, (University of Wisconsin, Madison)
+                <a href="https://xiaocw11.github.io/"><b>Chaowei Xiao</b></a> (University of Wisconsin, Madison)
             </td>
         </tr>
             <tr>
@@ -225,7 +225,7 @@
         </tr>
         <tr>
             <td class="speaker">
-                <a href="https://mbzuai.ac.ae/study/faculty/nils-lukas/"><b>Nils Lukas</b></a>, (MBZUAI)
+                <a href="https://mbzuai.ac.ae/study/faculty/nils-lukas/"><b>Nils Lukas</b></a> (MBZUAI)
             </td>
         </tr>
                 <tr>
@@ -253,7 +253,7 @@
         </tr>
         <tr>
             <td class="speaker">
-                <a href="https://mbzuai.ac.ae/study/faculty/preslav-nakov/"><b>Preslav Nakov</b></a>, (MBZUAI)
+                <a href="https://mbzuai.ac.ae/study/faculty/preslav-nakov/"><b>Preslav Nakov</b></a> (MBZUAI)
             </td>
         </tr>
             <tr>
@@ -296,7 +296,7 @@
         </tr>
         <tr>
             <td class="speaker">
-                <a href="https://haolun-wu.github.io/"><b>Haolun Wu</b></a>, (Stanford University / Mila)
+                <a href="https://haolun-wu.github.io/"><b>Haolun Wu</b></a> (Stanford University / Mila)
             </td>
         </tr>
                 <tr>
@@ -325,7 +325,7 @@
         </tr>
         <tr>
             <td class="speaker">
-                <a href="https://sanaelotfi.github.io/"><b>Sanae Lotfi</b></a>, (New York University)
+                <a href="https://sanaelotfi.github.io/"><b>Sanae Lotfi</b></a> (New York University)
             </td>
         </tr>
              <tr>
