--- a/day2.html
+++ b/day2.html
@@ -59,7 +59,7 @@
         </tr>
         <tr>
             <td class="speaker">
-                <a href="https://www.cse.msu.edu/~nandakum/"><b>Karthik Nandakumar</b></a>, (Michigan State University / MBZUAI)
+                <a href="https://www.cse.msu.edu/~nandakum/"><b>Karthik Nandakumar</b></a> (Michigan State University / MBZUAI)
             </td>
         </tr>
              <tr>
@@ -89,7 +89,7 @@
         </tr>
         <tr>
             <td class="speaker">
-                <a href="https://takashiishida.github.io/"><b>Takashi Ishida</b></a>, (The University of Tokyo)
+                <a href="https://takashiishida.github.io/"><b>Takashi Ishida</b></a> (The University of Tokyo)
             </td>
         </tr>
              <tr>
@@ -119,7 +119,7 @@
         </tr>
         <tr>
             <td class="speaker">
-                <a href="https://minsuukim.github.io/"><b>Minsu Kim</b></a>, (Mila - Quebec AI Institute)
+                <a href="https://minsuukim.github.io/"><b>Minsu Kim</b></a> (Mila - Quebec AI Institute)
             </td>
         </tr>
              <tr>
@@ -160,7 +160,7 @@
         </tr>
         <tr>
             <td class="speaker">
-                <a href="https://p-petrov.com/"><b>Aleksandar Petrov</b></a>, (University of Oxford)
+                <a href="https://p-petrov.com/"><b>Aleksandar Petrov</b></a> (University of Oxford)
             </td>
         </tr>
              <tr>
@@ -206,7 +206,7 @@
         </tr>
         <tr>
             <td class="speaker">
-                <a href="https://mbzuai.ac.ae/study/faculty/tongliang-liu/"><b>Tongliang Liu</b></a>, (MBZUAI / USYD)
+                <a href="https://mbzuai.ac.ae/study/faculty/tongliang-liu/"><b>Tongliang Liu</b></a> (MBZUAI / USYD)
                
             </td>
         </tr>
