--- a/speakerlist.html
+++ b/speakerlist.html
@@ -68,6 +68,10 @@
                 <td class="speaker"><a href="http://www.prateekjain.org">Prateek Jain</a> (Google)</td>
             </tr>
             <tr class="speaker">
+                <td class="speaker"><img src="./MLLM2024_speakerlist_files/Hakim_Hacid.jpg" alt="Speaker 2" class="dispic"></td>
+                <td class="speaker"><a href="https://www.tii.ae/team/dr-hakim-hacid">Hakim Hacid</a> (Technology Innovation Institute)</td>
+            </tr>
+            <tr class="speaker">
                 <td class="speaker"><img src="./MLLM2024_speakerlist_files/Preslav_Nakov.jpeg" alt="Speaker 2" class="dispic"></td>
                 <td class="speaker"><a href="https://mbzuai.ac.ae/study/faculty/preslav-nakov/">Preslav Nakov</a> (MBZUAI)</td>
             </tr>
@@ -119,7 +123,11 @@
             </tr>
             <tr class="speaker">
                 <td class="speaker"><img src="./MLLM2024_speakerlist_files/Aleksandar_Petrov.jpeg" alt="Speaker 2" class="dispic"></td>
-                <td class="speaker"><a href="https://p-petrov.com">Aleksandar Petrov</a> (University of Oxford )</td>
+                <td class="speaker"><a href="https://p-petrov.com">Aleksandar Petrov</a> (University of Oxford)</td>
+            </tr>
+            <tr class="speaker">
+                <td class="speaker"><img src="./MLLM2024_speakerlist_files/Tongliang_Liu.jpg" alt="Speaker 2" class="dispic"></td>
+                <td class="speaker"><a href="https://mbzuai.ac.ae/study/faculty/tongliang-liu/">Tongliang Liu</a> (MBZUAI / USYD)</td>
             </tr>
 <!--
             <tr class="speaker">
