--- a/day2.html
+++ b/day2.html
@@ -214,9 +214,8 @@
 
                     <hr style="border: 0; height: 1px; background-color: #ddd; margin: 16px 0;">
 
-                    <b>Tongliang Liu Bio:</b> Tongliang Liu is the Director of Sydney AI Centre at the University of Sydney, and is also affiliated with Mohamed bin Zayed University of Artificial Intelligence. 
-                     He is broadly interested in the fields of trustworthy machine learning and its interdisciplinary applications, with a particular emphasis on learning with noisy labels, adversarial learning, causal representation learning, transfer learning, unsupervised learning, and statistical deep learning theory. 
-                     He has authored and co-authored more than 200 research articles including ICML, NeurIPS, ICLR, CVPR, ICCV, ECCV, AAAI, IJCAI, TPAMI, and JMLR. He is/was a senior meta reviewer for many conferences, such as NeurIPS, ICLR, AAAI, and IJCAI. 
+                    <b>Tongliang Liu Bio:</b> Tongliang Liu is an Affiliated Associate Professor with the ML department with MBZUAI. He is also the Director of Sydney AI Centre at the University of Sydney. 
+                     He is broadly interested in the fields of trustworthy machine learning and its interdisciplinary applications, with a particular emphasis on learning with noisy labels, adversarial learning, causal representation learning, transfer learning, unsupervised learning, and statistical deep learning theory. He has authored and co-authored more than 200 research articles including ICML, NeurIPS, ICLR, CVPR, ICCV, ECCV, AAAI, IJCAI, TPAMI, and JMLR. He is/was a senior meta reviewer for many conferences, such as NeurIPS, ICLR, AAAI, and IJCAI. 
                      He is a co-Editor-in-Chief for Neural Networks, an Associate Editor of IEEE TPAMI, IEEE TIP, TMLR, and ACM Computing Surveys, and is on the Editorial Boards of JMLR and MLJ. He is a recipient of CORE Award for Outstanding Research Contribution in 2024, the IEEE AI’s 10 to Watch Award in 2022, the Future Fellowship Award from Australian Research Council (ARC) in 2022, the Top-40 Early Achievers by The Australian in 2020, and the Discovery Early Career Researcher Award (DECRA) from ARC in 2018.
                 </td>        
             </tr>
